--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,14 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Pacific crest trail</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="panel">
-        1
-      </div>
-      <div class="panel">
-        2
-      </div>
-      <div class="panel">
-        3
-      </div>
-    </div>
-  </body>
-</html>
+<div class="navbar">
+  <div class="links">
+    <a href="#">Home</a>
+  </div>
+  <div class="links">
+    <a href="#">Media</a>
+  </div>
+  <div class="links">
+    <a href="#">News</a>
+  </div>
+</div>
+<div class="home">
+  <router-outlet></router-outlet>
+</div>
