--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,12 @@
-<p>
-  home works!
-</p>
-<div>
-  <div>
-    <p>{{ result }}</p>
+
+<div class="timer">
+  <p>{{ result }}</p>
+</div>
+<div class="imageContainer">
+  <div class="introImage">
+    <img src="assets/images/gamePic2.jpeg" alt="">
+  </div>
+  <div class="overlay">
+
   </div>
 </div>
