--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="navbar">
   <div class="links">
-    <a href="#">Home</a>
+    <a href="#" routerLink="">Home</a>
   </div>
   <div class="links">
-    <a href="#">Media</a>
+    <a href="#" routerLink="media">Media</a>
   </div>
   <div class="links">
-    <a href="#">News</a>
+    <a href="#" routerLink="news">News</a>
   </div>
 </div>
 <div class="home">
