add picture and info, fix background

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,6 +7,26 @@
     <img src="assets/images/gamePic2.jpeg" alt="">
   </div>
   <div class="overlay">
+    <p>Game Title</p>
+  </div>
+</div>
+<div class="devs">
+  <div class="panel">
 
   </div>
+  <div class="panel">
+    <div class="devImage">
+      <img src="assets/images/smallTeam.jpeg" alt="picure of the games developers">
+    </div>
+    <div class="devText">
+      <h1>Small Team Big Dreams</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+  </div>
+  <div class="panel">
+
+  </div>
+</div>
+<div class="">
+ details or images? 
 </div>
