--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,13 +1,25 @@
+
 .timer{
   display: flex;
   justify-content: space-around;
   font-size: 100px;
   font-family: helvetica;
-  background-color: #005627;
+  background: linear-gradient(black, #00052b);
   min-height: 320px;
   p{
-   color: #f2f2f2;
    text-shadow: 2px 2px black;
+   animation: fadein 4s;
+  }
+}
+@keyframes fadein {
+  0%{
+    opacity: 0;
+  }
+  30%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
   }
 }
 
@@ -19,12 +31,36 @@
   }
 }
 .overlay{
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position:absolute;
   width:100%;
-  height:100%;
   top:0;
   bottom:0;
   right:0;
   left:0;
   background-color: rgba(0,3,45,0.5);
+  color: rgba(255,255,255,0.5);
+  font-family: cursive;
+  font-size: 100px;
+}
+.devs{
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  background-color: black;
+  .panel:nth-child(2){
+    grid-column: 2 / 12;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+  }
+  img{
+    width: 100%;
+  }
+  .devText{
+    padding-left: 30px;
+    font-family: helvetica;
+  }
 }
